--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./source:/usr/share/nginx/html
       - ./docker/nginx/server.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "80:80"
+      - "81:80"
   db:
     build: ./docker/mysql
     container_name: laravel-training-db
@@ -21,7 +21,7 @@ services:
     expose:
       - "3306"
     ports:
-      - "3306:3306"
+      - "13306:3306"
     volumes:
       - ./docker/mysql/logs:/var/log/mysql
   php:
@@ -29,6 +29,8 @@ services:
     container_name: laravel-training-php-fpm
     volumes:
       - ./source:/var/www/html
+    ports: 
+      - "9000:9000"
     expose: 
       - "9000"
   laravel:
